# Memory_Guardian

./: .gitignore  README.md  pyproject.toml
data/: fts.sqlite  ledger.jsonl
data/daily/: 2026-02-22.md
memory_guardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory_os/: __init__.py  api.py  cli.py  consolidate.py  index_embed.py  index_fts.py  ledger.py  pack.py  retrieve.py
